complete tests on TransactionAnalyticsServiceImpl